initial data load as data frame (sample file only) + sample review file

--- a/notebooks/amazonProductReviewAnalysis_nagib.ipynb
+++ b/notebooks/amazonProductReviewAnalysis_nagib.ipynb
@@ -2,6 +2,119 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# library imports \n",
+    "\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import StructType, StructField, StringType,IntegerType, FloatType,BooleanType,DateType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialise the session \n",
+    "\n",
+    "spark = SparkSession \\\n",
+    "    .builder \\\n",
+    "    .appName(\"Amazon Product Review Analysis\") \\\n",
+    "    .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Dataset \n",
+    "\n",
+    "| Column | Description | \n",
+    "| :--- | :--- |\n",
+    "| marketplace | 2 letter country code of the marketplace where the review was written. |\n",
+    "| customer_id | Random identifier that can be used to aggregate reviews written by a single author. |\n",
+    "| review_id | The unique ID of the review. |\n",
+    "| product_id | The unique Product ID the review pertains to. In the multilingual dataset the reviews for the same product in different countries can be grouped by the same product_id. | \n",
+    "| product_parent | Random identifier that can be used to aggregate reviews for the same product. |\n",
+    "| product_title | Title of the product. | \n",
+    "| product_category | Broad product category that can be used to group reviews (also used to group the dataset into  coherent parts). | \n",
+    "| star_rating | the 1-5 star rating of the review. | \n",
+    "| helpful_votes | Number of helpful votes. | \n",
+    "| total_votes | Number of total votes the review received. | \n",
+    "| vine | Review was written as part of the Vine program. |\n",
+    "| verified_purchase | The review is on a verified purchase. |\n",
+    "| review_headline | The title of the review. |\n",
+    "| review_body | The review text. |\n",
+    "| review_date | The date the review was written | \n",
+    "\n",
+    "\n",
+    "DATA FORMAT\n",
+    "Tab ('\\t') separated text file, without quote or escape characters.\n",
+    "First line in each file is header; 1 line corresponds to 1 record.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the data set \n",
+    "review_data = '../data/sample_us.tsv'\n",
+    "\n",
+    "aws_product_review_schema = StructType([\n",
+    "    StructField(\"marketplace\", StringType(), True),\n",
+    "    StructField(\"customer_id\", StringType(), True),\n",
+    "    StructField(\"review_id\", StringType(), True),\n",
+    "    StructField(\"product_id\",StringType(),True),\n",
+    "    StructField(\"product_parent\",StringType(),False),\n",
+    "    StructField(\"product_title\", StringType(), False),\n",
+    "    StructField(\"product_category\", StringType(), False),\n",
+    "    StructField(\"star_rating\", IntegerType(), False),\n",
+    "    StructField(\"helpful_votes\",IntegerType(),False),\n",
+    "    StructField(\"total_votes\", IntegerType(), False),\n",
+    "    StructField(\"vine\",StringType(),False),\n",
+    "    StructField(\"verified_purchase\", StringType(), False),\n",
+    "    StructField(\"review_headline\", StringType(), False),\n",
+    "    StructField(\"review_body\", StringType(), False),\n",
+    "    StructField(\"review_date\",DateType(),False)])\n",
+    "\n",
+    "awsProductReview_raw_data = spark.read.csv(review_data,header=True,sep=\"\\t\",schema=aws_product_review_schema)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-----------+\n",
+      "|marketplace|customer_id|     review_id|product_id|product_parent|       product_title|product_category|star_rating|helpful_votes|total_votes|vine|verified_purchase|     review_headline|         review_body|review_date|\n",
+      "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-----------+\n",
+      "|         US|   18778586| RDIJS7QYB6XNR|B00EDBY7X8|     122952789|Monopoly Junior B...|            Toys|          5|            0|          0|   N|                Y|          Five Stars|        Excellent!!!| 2015-08-31|\n",
+      "|         US|   24769659|R36ED1U38IELG8|B00D7JFOPC|     952062646|56 Pieces of Wood...|            Toys|          5|            0|          0|   N|                Y|Good quality trac...|Great quality woo...| 2015-08-31|\n",
+      "|         US|   44331596| R1UE3RPRGCOLD|B002LHA74O|     818126353|Super Jumbo Playi...|            Toys|          2|            1|          1|   N|                Y|           Two Stars|Cards are not as ...| 2015-08-31|\n",
+      "|         US|   23310293|R298788GS6I901|B00ARPLCGY|     261944918|Barbie Doll and F...|            Toys|          5|            0|          0|   N|                Y|my daughter loved...|my daughter loved...| 2015-08-31|\n",
+      "|         US|   38745832|  RNX4EXOBBPN5|B00UZOPOFW|     717410439|Emazing Lights eL...|            Toys|          1|            1|          1|   N|                Y|     DONT BUY THESE!|Do not buy these!...| 2015-08-31|\n",
+      "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "awsProductReview_raw_data.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
