stage 1 draft (local machine only)

--- a/notebooks/amazonProductReviewAnalysis_nagib.ipynb
+++ b/notebooks/amazonProductReviewAnalysis_nagib.ipynb
@@ -4,12 +4,30 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'customHelpers' from '/Users/nagibshah/dev/COMP5349_AmazonProductReviewAnalysis/notebooks/customHelpers.py'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# library imports \n",
+    "import sys\n",
+    "from importlib import reload\n",
+    "import findspark\n",
+    "import customHelpers as helper\n",
+    "findspark.init()\n",
     "\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.types import StructType, StructField, StringType,IntegerType, FloatType,BooleanType,DateType"
+    "from pyspark.sql.types import StructType, StructField, StringType,IntegerType, FloatType,BooleanType,DateType\n",
+    "\n",
+    "reload(helper)"
    ]
   },
   {
@@ -30,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load Dataset \n",
+    "## Load Dataset \n",
     "\n",
     "| Column | Description | \n",
     "| :--- | :--- |\n",
@@ -58,12 +76,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.35 ms, sys: 1.08 ms, total: 3.43 ms\n",
+      "Wall time: 1.22 s\n"
+     ]
+    }
+   ],
    "source": [
     "# load the data set \n",
-    "review_data = '../data/sample_us.tsv'\n",
+    "## review_data = '../data/sample_us.tsv'\n",
+    "# actual data load - PERFORMANCE WARNING ON LOCAL MACHINE\n",
+    "review_data = '../data/amazon_reviews_us_Music_v1_00.tsv'\n",
     "\n",
     "aws_product_review_schema = StructType([\n",
     "    StructField(\"marketplace\", StringType(), True),\n",
@@ -82,13 +111,13 @@
     "    StructField(\"review_body\", StringType(), False),\n",
     "    StructField(\"review_date\",DateType(),False)])\n",
     "\n",
-    "awsProductReview_raw_data = spark.read.csv(review_data,header=True,sep=\"\\t\",schema=aws_product_review_schema)\n",
+    "%time awsProductReview_raw_data = spark.read.csv(review_data,header=True,sep=\"\\t\",schema=aws_product_review_schema)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,11 +127,11 @@
       "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-----------+\n",
       "|marketplace|customer_id|     review_id|product_id|product_parent|       product_title|product_category|star_rating|helpful_votes|total_votes|vine|verified_purchase|     review_headline|         review_body|review_date|\n",
       "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-----------+\n",
-      "|         US|   18778586| RDIJS7QYB6XNR|B00EDBY7X8|     122952789|Monopoly Junior B...|            Toys|          5|            0|          0|   N|                Y|          Five Stars|        Excellent!!!| 2015-08-31|\n",
-      "|         US|   24769659|R36ED1U38IELG8|B00D7JFOPC|     952062646|56 Pieces of Wood...|            Toys|          5|            0|          0|   N|                Y|Good quality trac...|Great quality woo...| 2015-08-31|\n",
-      "|         US|   44331596| R1UE3RPRGCOLD|B002LHA74O|     818126353|Super Jumbo Playi...|            Toys|          2|            1|          1|   N|                Y|           Two Stars|Cards are not as ...| 2015-08-31|\n",
-      "|         US|   23310293|R298788GS6I901|B00ARPLCGY|     261944918|Barbie Doll and F...|            Toys|          5|            0|          0|   N|                Y|my daughter loved...|my daughter loved...| 2015-08-31|\n",
-      "|         US|   38745832|  RNX4EXOBBPN5|B00UZOPOFW|     717410439|Emazing Lights eL...|            Toys|          1|            1|          1|   N|                Y|     DONT BUY THESE!|Do not buy these!...| 2015-08-31|\n",
+      "|         US|   10140119|R3LI5TRP3YIDQL|B00TXH4OLC|     384427924|Whatever's for Us...|           Music|          5|            0|          0|   N|                Y|          Five Stars|Love this CD alon...| 2015-08-31|\n",
+      "|         US|   27664622|R3LGC3EKEG84PX|B00B6QXN6U|     831769051|Same Trailer Diff...|           Music|          5|            0|          0|   N|                Y|A new fave in our...|This is the album...| 2015-08-31|\n",
+      "|         US|   45946560| R9PYL3OYH55QY|B001GCZXW6|      14067376| Soaring (Jazz Club)|           Music|          5|            0|          1|   N|                Y|          Five Stars|  Excellent / thanks| 2015-08-31|\n",
+      "|         US|   15146326|R3PWBAWUS4NT0Q|B000003EK6|     566295619|     CARIBBEAN PARTY|           Music|          3|            0|          0|   N|                Y|         Three Stars|Nice variety of c...| 2015-08-31|\n",
+      "|         US|   16794688|R15LYP3O51UU9E|B00N1F0BKK|     210426072|         Pain Killer|           Music|          5|            0|          0|   N|                Y|          Five Stars|Purchased as a gi...| 2015-08-31|\n",
       "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-----------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -112,6 +141,272 @@
    "source": [
     "awsProductReview_raw_data.show(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
+      "|customer_id|     review_id|product_id|       product_title|product_category|star_rating|helpful_votes|total_votes|     review_headline|         review_body|review_date|\n",
+      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
+      "|   10140119|R3LI5TRP3YIDQL|B00TXH4OLC|Whatever's for Us...|           Music|          5|            0|          0|          Five Stars|Love this CD alon...| 2015-08-31|\n",
+      "|   27664622|R3LGC3EKEG84PX|B00B6QXN6U|Same Trailer Diff...|           Music|          5|            0|          0|A new fave in our...|This is the album...| 2015-08-31|\n",
+      "|   45946560| R9PYL3OYH55QY|B001GCZXW6| Soaring (Jazz Club)|           Music|          5|            0|          1|          Five Stars|  Excellent / thanks| 2015-08-31|\n",
+      "|   15146326|R3PWBAWUS4NT0Q|B000003EK6|     CARIBBEAN PARTY|           Music|          3|            0|          0|         Three Stars|Nice variety of c...| 2015-08-31|\n",
+      "|   16794688|R15LYP3O51UU9E|B00N1F0BKK|         Pain Killer|           Music|          5|            0|          0|          Five Stars|Purchased as a gi...| 2015-08-31|\n",
+      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfProductReview = awsProductReview_raw_data.drop('vine').drop('verified_purchase') \\\n",
+    "                    .drop('product_parent').drop('marketplace')\n",
+    "dfProductReview.show(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stage One: Overall statistics\n",
+    "\n",
+    "### Produce overall summary statistics of the data set, in particular,\n",
+    "\n",
+    "* the total number of reviews\n",
+    "* the number of unique users\n",
+    "* the number of unique products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+---------------+-------------+\n",
+      "|unique_customers|unique_products|total_reviews|\n",
+      "+----------------+---------------+-------------+\n",
+      "|         1940732|         782326|      4751577|\n",
+      "+----------------+---------------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import col, count, countDistinct\n",
+    "\n",
+    "dfOverallStats = dfProductReview.agg(countDistinct(\"customer_id\").alias(\"unique_customers\"), \\\n",
+    "                    countDistinct(\"product_id\").alias(\"unique_products\"), \\\n",
+    "                    count(col=\"review_id\").alias(\"total_reviews\")) \\\n",
+    "\n",
+    "dfOverallStats.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For user-review distribution, you are asked to find out:\n",
+    "\n",
+    "* the largest number of reviews published by a single user\n",
+    "* the top 10 users ranked by the number of reviews they publish\n",
+    "* the median number of reviews published by a user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top Reviewer:\n",
+      "+-----------+-------------+\n",
+      "|customer_id|total_reviews|\n",
+      "+-----------+-------------+\n",
+      "|   50736950|         7168|\n",
+      "+-----------+-------------+\n",
+      "only showing top 1 row\n",
+      "\n",
+      "Top 10 Reviewers:\n",
+      "+-----------+-------------+\n",
+      "|customer_id|total_reviews|\n",
+      "+-----------+-------------+\n",
+      "|   50736950|         7168|\n",
+      "|   38214553|         5412|\n",
+      "|   51184997|         5369|\n",
+      "|   18116317|         4222|\n",
+      "|   23267387|         4023|\n",
+      "|   50345651|         3793|\n",
+      "|   14539589|         2896|\n",
+      "|   15725862|         2842|\n",
+      "|   19380211|         2592|\n",
+      "|   20018062|         2568|\n",
+      "+-----------+-------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.functions import count\n",
+    "import pyspark.sql.functions as F\n",
+    "\n",
+    "dfUserReviewCounts = helper.distributionStats(dfRecords=dfProductReview.select(\"customer_id\", \"review_id\"), \\\n",
+    "                                              partitionBy=\"customer_id\",countBy=\"review_id\", \\\n",
+    "                                              returnCountName=\"total_reviews\")\n",
+    "print(\"Top Reviewer:\")\n",
+    "dfUserReviewCounts.show(1)\n",
+    "print(\"Top 10 Reviewers:\")\n",
+    "dfUserReviewCounts.show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "median number of 1.0 reviews published by user\n"
+     ]
+    }
+   ],
+   "source": [
+    "# median reviews \n",
+    "# no median finder in spark... do we need to implement using RDD?\n",
+    "\n",
+    "user_review_median=dfUserReviewCounts.approxQuantile(\"total_reviews\", [0.50], 0)[0]\n",
+    "print(\"median number of {0} reviews published by user\".format(user_review_median))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For product-review distribution, you are asked to find out:\n",
+    "    \n",
+    "* the largest number of reviews written for a single product\n",
+    "* the top 10 products ranked by the number of reviews they have\n",
+    "* the median number of reviews a product has"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top Product By Review:\n",
+      "+----------+-------------+\n",
+      "|product_id|total_reviews|\n",
+      "+----------+-------------+\n",
+      "|B00008OWZG|         3936|\n",
+      "+----------+-------------+\n",
+      "only showing top 1 row\n",
+      "\n",
+      "Top 10 Products by Reviews:\n",
+      "+----------+-------------+\n",
+      "|product_id|total_reviews|\n",
+      "+----------+-------------+\n",
+      "|B00008OWZG|         3936|\n",
+      "|B0000AGWEC|         3326|\n",
+      "|B00MIA0KGY|         2699|\n",
+      "|B00NEJ7MMI|         2420|\n",
+      "|B000089RVX|         2376|\n",
+      "|B004EBT5CU|         2106|\n",
+      "|B0026P3G12|         2080|\n",
+      "|B00009PRZF|         2026|\n",
+      "|B00004XONN|         1901|\n",
+      "|B00006J6VG|         1793|\n",
+      "+----------+-------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfProductReviewCounts = helper.distributionStats(dfRecords=dfProductReview.select(\"product_id\", \"review_id\"), \\\n",
+    "                                              partitionBy=\"product_id\",countBy=\"review_id\", \\\n",
+    "                                              returnCountName=\"total_reviews\")\n",
+    "print(\"Top Product By Review:\")\n",
+    "dfProductReviewCounts.show(1)\n",
+    "print(\"Top 10 Products by Reviews:\")\n",
+    "dfProductReviewCounts.show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "median number of 2.0 reviews per product\n"
+     ]
+    }
+   ],
+   "source": [
+    "# median reviews \n",
+    "# no median finder in spark... do we need to implement using RDD?\n",
+    "\n",
+    "product_review_median=dfProductReviewCounts.approxQuantile(\"total_reviews\", [0.5], 0)[0]\n",
+    "print(\"median number of {0} reviews per product\".format(product_review_median))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stage Two: Filtering Unwanted Data\n",
+    "\n",
+    "filter reviews based on length, reviewer and product feature. In particular, the following reviews should be removed:\n",
+    "\n",
+    "* reviews with less than two sentences in the review body.\n",
+    "* reviews published by users with less than median number of reviews published\n",
+    "* reviews from products with less than median number of reviews received\n",
+    "\n",
+    "After filtering out the above, find out:\n",
+    "\n",
+    "* top 10 users ranked by median number of sentences in the reviews they have published\n",
+    "* top 10 products ranked by median number of sentences in the reviews they have received\n",
+    "\n",
+    "NOTE: Sentence Segmentation Using: NLTK?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
