stage 2 upto filtering

--- a/notebooks/amazonProductReviewAnalysis_nagib.ipynb
+++ b/notebooks/amazonProductReviewAnalysis_nagib.ipynb
@@ -23,8 +23,9 @@
     "import findspark\n",
     "import customHelpers as helper\n",
     "findspark.init()\n",
-    "\n",
+    "from pyspark import SparkContext\n",
     "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import SQLContext\n",
     "from pyspark.sql.types import StructType, StructField, StringType,IntegerType, FloatType,BooleanType,DateType\n",
     "\n",
     "reload(helper)"
@@ -41,7 +42,9 @@
     "spark = SparkSession \\\n",
     "    .builder \\\n",
     "    .appName(\"Amazon Product Review Analysis\") \\\n",
-    "    .getOrCreate()"
+    "    .getOrCreate()\n",
+    "\n",
+    "#sc = SparkContext(appName=\"Amazon Product Review Analysis\")"
    ]
   },
   {
@@ -83,14 +86,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.35 ms, sys: 1.08 ms, total: 3.43 ms\n",
-      "Wall time: 1.22 s\n"
+      "CPU times: user 2.2 ms, sys: 1.09 ms, total: 3.29 ms\n",
+      "Wall time: 1.17 s\n"
      ]
     }
    ],
    "source": [
     "# load the data set \n",
-    "## review_data = '../data/sample_us.tsv'\n",
+    "#review_data = '../data/sample_us.tsv'\n",
     "# actual data load - PERFORMANCE WARNING ON LOCAL MACHINE\n",
     "review_data = '../data/amazon_reviews_us_Music_v1_00.tsv'\n",
     "\n",
@@ -111,6 +114,19 @@
     "    StructField(\"review_body\", StringType(), False),\n",
     "    StructField(\"review_date\",DateType(),False)])\n",
     "\n",
+    "aws_product_review_schema_limited = StructType([\n",
+    "    StructField(\"customer_id\", StringType(), True),\n",
+    "    StructField(\"review_id\", StringType(), True),\n",
+    "    StructField(\"product_id\",StringType(),True),\n",
+    "    StructField(\"product_title\", StringType(), False),\n",
+    "    StructField(\"product_category\", StringType(), False),\n",
+    "    StructField(\"star_rating\", IntegerType(), False),\n",
+    "    StructField(\"helpful_votes\",IntegerType(),False),\n",
+    "    StructField(\"total_votes\", IntegerType(), False),\n",
+    "    StructField(\"review_headline\", StringType(), False),\n",
+    "    StructField(\"review_body\", StringType(), False),\n",
+    "    StructField(\"review_date\",DateType(),False)])\n",
+    "\n",
     "%time awsProductReview_raw_data = spark.read.csv(review_data,header=True,sep=\"\\t\",schema=aws_product_review_schema)\n",
     "\n"
    ]
@@ -118,6 +134,28 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4751577\n",
+      "1000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# when testing in local machine only \n",
+    "print(awsProductReview_raw_data.count())\n",
+    "# limit to 1 mil\n",
+    "awsProductReview_raw_data = awsProductReview_raw_data.limit(1000000)\n",
+    "print(awsProductReview_raw_data.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +241,7 @@
       "+----------------+---------------+-------------+\n",
       "|unique_customers|unique_products|total_reviews|\n",
       "+----------------+---------------+-------------+\n",
-      "|         1940732|         782326|      4751577|\n",
+      "|          461198|         297940|      1000000|\n",
       "+----------------+---------------+-------------+\n",
       "\n"
      ]
@@ -232,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +281,7 @@
       "+-----------+-------------+\n",
       "|customer_id|total_reviews|\n",
       "+-----------+-------------+\n",
-      "|   50736950|         7168|\n",
+      "|   38214553|         1497|\n",
       "+-----------+-------------+\n",
       "only showing top 1 row\n",
       "\n",
@@ -251,16 +289,16 @@
       "+-----------+-------------+\n",
       "|customer_id|total_reviews|\n",
       "+-----------+-------------+\n",
-      "|   50736950|         7168|\n",
-      "|   38214553|         5412|\n",
-      "|   51184997|         5369|\n",
-      "|   18116317|         4222|\n",
-      "|   23267387|         4023|\n",
-      "|   50345651|         3793|\n",
-      "|   14539589|         2896|\n",
-      "|   15725862|         2842|\n",
-      "|   19380211|         2592|\n",
-      "|   20018062|         2568|\n",
+      "|   38214553|         1497|\n",
+      "|   15536614|         1224|\n",
+      "|   18116317|         1053|\n",
+      "|    7080939|          921|\n",
+      "|   14539589|          723|\n",
+      "|   42836721|          652|\n",
+      "|   47924228|          604|\n",
+      "|   15725862|          594|\n",
+      "|   47423754|          558|\n",
+      "|   50736950|          513|\n",
       "+-----------+-------------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -283,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +364,7 @@
       "+----------+-------------+\n",
       "|product_id|total_reviews|\n",
       "+----------+-------------+\n",
-      "|B00008OWZG|         3936|\n",
+      "|B00MIA0KGY|         2699|\n",
       "+----------+-------------+\n",
       "only showing top 1 row\n",
       "\n",
@@ -334,16 +372,16 @@
       "+----------+-------------+\n",
       "|product_id|total_reviews|\n",
       "+----------+-------------+\n",
-      "|B00008OWZG|         3936|\n",
-      "|B0000AGWEC|         3326|\n",
       "|B00MIA0KGY|         2699|\n",
       "|B00NEJ7MMI|         2420|\n",
-      "|B000089RVX|         2376|\n",
-      "|B004EBT5CU|         2106|\n",
-      "|B0026P3G12|         2080|\n",
-      "|B00009PRZF|         2026|\n",
-      "|B00004XONN|         1901|\n",
-      "|B00006J6VG|         1793|\n",
+      "|B00MRHANNI|         1513|\n",
+      "|B00H3GZMIE|         1277|\n",
+      "|B00MU79IL8|         1172|\n",
+      "|B00UCFVIDQ|         1114|\n",
+      "|B00KLF5J64|         1038|\n",
+      "|B00EDY5KTA|         1008|\n",
+      "|B00NQKWAIQ|          997|\n",
+      "|B00007KWHG|          826|\n",
       "+----------+-------------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -362,14 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "median number of 2.0 reviews per product\n"
+      "median number of 1 reviews per product\n"
      ]
     }
    ],
@@ -377,7 +415,7 @@
     "# median reviews \n",
     "# no median finder in spark... do we need to implement using RDD?\n",
     "\n",
-    "product_review_median=dfProductReviewCounts.approxQuantile(\"total_reviews\", [0.5], 0)[0]\n",
+    "product_review_median=int(dfProductReviewCounts.approxQuantile(\"total_reviews\", [0.5], 0)[0])\n",
     "print(\"median number of {0} reviews per product\".format(product_review_median))"
    ]
   },
@@ -393,12 +431,181 @@
     "* reviews published by users with less than median number of reviews published\n",
     "* reviews from products with less than median number of reviews received\n",
     "\n",
-    "After filtering out the above, find out:\n",
+    "NOTE: Sentence Segmentation Using: NLTK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of rows before filter: 1000000\n",
+      "number of rows after filter: 999701\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"number of rows before filter: {0}\".format(dfProductReview.count()))\n",
+    "dfFilteredReviews = dfProductReview.na.drop(subset=[\"review_body\"])\n",
+    "print(\"number of rows after filter: {0}\".format(dfFilteredReviews.count()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of rows before filter: 999701\n",
+      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
+      "|customer_id|     review_id|product_id|       product_title|product_category|star_rating|helpful_votes|total_votes|     review_headline|         review_body|review_date|\n",
+      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
+      "|   27664622|R3LGC3EKEG84PX|B00B6QXN6U|Same Trailer Diff...|           Music|          5|            0|          0|A new fave in our...|This is the album...| 2015-08-31|\n",
+      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
+      "only showing top 1 row\n",
+      "\n",
+      "number of rows post filter: 329468\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reviews with less than 2 sentences in review_body\n",
+    "# convert to RDD and carry out a filter to remove rows with less than 2 sentences \n",
+    "\n",
+    "print(\"number of rows before filter: {0}\".format(dfFilteredReviews.count()))\n",
+    "\n",
+    "dfFilteredReviews = dfFilteredReviews.filter(helper.FilterSentences('review_body'))\n",
+    "\n",
+    "#reviewRdd = dfProductReview.rdd.map(list).filter(helper.FilterSentences)\n",
+    "#print(reviewRdd.take(1))\n",
+    "# convert back to DF \n",
+    "#dfFilteredReviews = spark.createDataFrame(reviewRdd, aws_product_review_schema_limited)\n",
+    "#dfFilteredReviews = reviewRdd.toDF(schema=aws_product_review_schema_limited)\n",
+    "dfFilteredReviews.show(1)\n",
+    "dfFilteredReviews.cache()\n",
+    "\n",
+    "print(\"number of rows post filter: {0}\".format(dfFilteredReviews.count()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of rows before filter: 329468\n",
+      "number of rows post filter: 193229\n"
+     ]
+    }
+   ],
+   "source": [
+    "# user review filter \n",
+    "print(\"number of rows before filter: {0}\".format(dfFilteredReviews.count()))\n",
+    "\n",
+    "window = Window.partitionBy(\"customer_id\")\n",
+    "dfFilteredReviews = dfFilteredReviews \\\n",
+    "    .withColumn(\"review_count\", count(\"review_id\") \\\n",
+    "    .over(window)) \\\n",
+    "    .filter(col(\"review_count\") > user_review_median) \\\n",
+    "    .drop(\"review_count\")\n",
+    "\n",
+    "print(\"number of rows post filter: {0}\".format(dfFilteredReviews.count()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of rows before filter: 193229\n",
+      "number of rows post filter: 110098\n"
+     ]
+    }
+   ],
+   "source": [
+    "# product review filter\n",
+    "print(\"number of rows before filter: {0}\".format(dfFilteredReviews.count()))\n",
+    "\n",
+    "window = Window.partitionBy(\"product_id\")\n",
+    "dfFilteredReviews = dfFilteredReviews \\\n",
+    "    .withColumn(\"review_count\", count(\"review_id\") \\\n",
+    "    .over(window)) \\\n",
+    "    .filter(col(\"review_count\") > product_review_median) \\\n",
+    "    .drop(\"review_count\")\n",
+    "\n",
+    "print(\"number of rows post filter: {0}\".format(dfFilteredReviews.count()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
+      "|customer_id|     review_id|product_id|       product_title|product_category|star_rating|helpful_votes|total_votes|     review_headline|         review_body|review_date|\n",
+      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
+      "|   14082152|R14NH8X0QSTG4G|B000000ECF|       The Essential|           Music|          5|            0|          0|One of my favorit...|One of my favorit...| 2015-08-14|\n",
+      "|   51874739|R2NRR9WJSV0YRU|B000000ECF|       The Essential|           Music|          5|            0|          0|These Mainstream ...|Well, I first hea...| 2015-02-01|\n",
+      "|   12262905|R21A8AXIBPXZX6|B000000EKW|Joan Baez - Hits:...|           Music|          5|            1|          1|Singer, activist,...|Joan Baez's beaut...| 2015-03-02|\n",
+      "|   37415589|R1TZ42IIBOQJVI|B000000EKW|Joan Baez - Hits:...|           Music|          5|            1|          1|... this album on...|I  already had th...| 2014-10-09|\n",
+      "|   34790762|R270A1RA23E3BP|B000000IAS|Quiet Village / T...|           Music|          5|            0|          0|              Mellow|Just fun. Worth t...| 2015-08-11|\n",
+      "+-----------+--------------+----------+--------------------+----------------+-----------+-------------+-----------+--------------------+--------------------+-----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfFilteredReviews.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Number of Rows before cleanup: 1000000\n",
+      "Number of rows after all filters applied: 110098\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Original Number of Rows before cleanup: {0}\".format(dfProductReview.count()))\n",
+    "print(\"Number of rows after all filters applied: {0}\".format(dfFilteredReviews.count()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### After filtering out the above, find out:\n",
     "\n",
     "* top 10 users ranked by median number of sentences in the reviews they have published\n",
-    "* top 10 products ranked by median number of sentences in the reviews they have received\n",
-    "\n",
-    "NOTE: Sentence Segmentation Using: NLTK?"
+    "* top 10 products ranked by median number of sentences in the reviews they have received"
    ]
   },
   {
@@ -406,14 +613,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# top 10 users ranked by median number of sentences in the reviews they have published"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# top 10 products ranked by median number of sentences in the reviews they have received"
+   ]
   }
  ],
  "metadata": {
